# IN204_PROJET

./: CMakeLists.txt  README.md  make.sh
include/file_handlers/: CBRReader.h  CBRWriter.h  CBZReader.h  CBZWriter.h  PDFReader.h  Reader.h  Writer.h
include/gui/: MainWindow.h  ui_MainWindow.h
include/image/: ImageLoader.h
src/: main.cpp
src/file_handlers/: CBRReader.cpp  CBRWriter.cpp  CBZReader.cpp  CBZWriter.cpp  PDFReader.cpp  Writer.cpp
src/gui/: MainWindow.cpp  mainwindow.ui
src/image/: ImageLoader.cpp
